first kinda working thing

--- a/bad/uwsgi.ini
+++ b/bad/uwsgi.ini
@@ -1,9 +1,13 @@
 [uwsgi]
-# enable uwsgi router
-http = :8080
-stats = /tmp/stats.socket
-wsgi-file = app.py
-callable = app
-processes = 1
-threads = 2
-memory-report = true
+plugins = python3
+module = app:app
+
+master = true
+close-on-exec = true
+processes = 5
+
+socket = /tmp/upload.sock
+chmod-socket = 660
+vacuum = true
+
+die-on-term = true
