--- a/dcppr/Makefile
+++ b/dcppr/Makefile
@@ -8,12 +8,7 @@ radii:
 derot:
 	g++ -I/usr/include/opencv4/ derot.cpp -o derot -L`pkg-config --libs opencv4`
 
-derot-test: derot radii-test
-	./derot square.mp4 `./radii_check square.mp4 400` 10
-
-radii-test: radii
-	./radii_check square.mp4 400
-
-install: radii derot
+install-bin: radii derot
+	mkdir -p /tmp/www/bin/
 	cp radii_check /tmp/www/bin/radii_check
 	cp derot /tmp/www/bin/derot
