--- a/install/Makefile
+++ b/install/Makefile
@@ -1,6 +1,6 @@
 SITE_NAME = dpr-dev.epss.ucla.edu
 
-install_nginx:
+install-nginx:
 	cp $(SITE_NAME) /etc/nginx/sites-available/
 	rm -f /etc/nginx/sites-enabled/default
 	rm -f /etc/nginx/sites-enabled/$(SITE_NAME)
