--- a/proc/Makefile
+++ b/proc/Makefile
@@ -1,9 +1,8 @@
-install-proc: install-static install-uwsgi
-install-static:
-	cp index.html ndpr.js jquery.min.js /tmp/www/
-
-install-uwsgi:
-	sed -i 's|User=$$|User='$(shell whoami)'|' netdpr.service
+install-proc:
+	sed -i 's|User=$$|User='$(shell logname)'|' netdpr.service
 	sed -i 's|WorkingDirectory=$$|WorkingDirectory='$(shell pwd)'|' netdpr.service
+	cp netdpr.service /etc/systemd/system/netdpr.service
+	systemctl daemon-reload
+	systemctl start netdpr.service
 	
 
