--- a/dcppr/Makefile
+++ b/dcppr/Makefile
@@ -1,5 +1,3 @@
-.PHONY: radii_check derot
-
 default: radii derot
 
 radii:
@@ -9,6 +7,6 @@ derot:
 	g++ -I/usr/include/opencv4/ derot.cpp -o derot -L`pkg-config --libs opencv4`
 
 install-bin: radii derot
-	mkdir -p /tmp/www/bin/
-	cp radii_check /tmp/www/bin/radii_check
-	cp derot /tmp/www/bin/derot
+	mkdir -p /var/www/dpr-dev.epss.ucla.edu/bin
+	cp radii_check /var/www/dpr-dev.epss.ucla.edu/bin/radii_check
+	cp derot /var/www/dpr-dev.epss.ucla.edu/bin/derot
