--- a/static/Makefile
+++ b/static/Makefile
@@ -1,2 +1,2 @@
 install-static:
-	cp index.html ndpr.js jquery.min.js /tmp/www/
+	cp index.html ndpr.js jquery.min.js /var/www/dpr-dev.epss.ucla.edu/
