--- a/proc/uwsgi.ini
+++ b/proc/uwsgi.ini
@@ -1,11 +1,12 @@
 [uwsgi]
 plugins = python3
 module = app:app
+logto = /tmp/uwlog.log
 
 master = true
 close-on-exec = true
 processes = 5
-harakiri = 60
+harakiri = 120
 
 socket = /tmp/upload.sock
 chmod-socket = 660
