update make files with new prod directory

--- a/dcppr/Makefile
+++ b/dcppr/Makefile
@@ -7,6 +7,6 @@ derot:
 	g++ -I/usr/include/opencv4/ derot.cpp -o derot -L`pkg-config --libs opencv4`
 
 install-bin: radii derot
-	mkdir -p /var/www/dpr-dev.epss.ucla.edu/bin
-	cp radii_check /var/www/dpr-dev.epss.ucla.edu/bin/radii_check
-	cp derot /var/www/dpr-dev.epss.ucla.edu/bin/derot
+	mkdir -p /var/www/diyrot.epss.ucla.edu/bin
+	cp radii_check /var/www/diyrot.epss.ucla.edu/bin/radii_check
+	cp derot /var/www/diyrot.epss.ucla.edu/bin/derot
