--- a/nginx/Makefile
+++ b/nginx/Makefile
@@ -1,8 +1,6 @@
-SITE_NAME = diyrot.epss.ucla.edu
-
 install-nginx:
-	cp $(SITE_NAME) /etc/nginx/sites-available/
+	cp $(site) /etc/nginx/sites-available/
 	rm -f /etc/nginx/sites-enabled/default
-	rm -f /etc/nginx/sites-enabled/$(SITE_NAME)
-	ln -s /etc/nginx/sites-available/$(SITE_NAME) /etc/nginx/sites-enabled/$(SITE_NAME)
+	rm -f /etc/nginx/sites-enabled/$(site)
+	ln -s /etc/nginx/sites-available/$(site) /etc/nginx/sites-enabled/$(site)
 	systemctl restart nginx
