--- a/static/Makefile
+++ b/static/Makefile
@@ -1,2 +1,2 @@
 install-static:
-	cp favicon.ico index.html ndpr.js jquery.min.js /var/www/diyrot.epss.ucla.edu/
+	cp favicon.ico index.html ndpr.js /var/www/$(site)/
