--- a/proc/uwsgi.ini
+++ b/proc/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-plugins = python3
+plugins = python3, syslog
 module = app:app
-logto = /tmp/uwlog.log
+logger = syslog:netdpr
 
 master = true
 close-on-exec = true
