--- a/static/Makefile
+++ b/static/Makefile
@@ -1,2 +1,2 @@
 install-static:
-	cp favicon.ico index.html ndpr.js $(ROOT_DIR)/$(site)/
+	cp favicon.ico index.html ndpr.js *.png $(ROOT_DIR)/$(site)/
