--- a/dcppr/Makefile
+++ b/dcppr/Makefile
@@ -1,25 +1,44 @@
-.PHONY: derot radii prederot siderot all
+.PHONY: all radii derot prederot adv_prederot adv_derot sbs_derot sbs_prederot sbs_adv_derot sbs_adv_prederot
 
-INCLUDES = "/usr/local/Cellar/opencv/4.7.0/include/opencv4"
-default: install-bin
+INCLUDES = "/usr/local/Cellar/opencv/4.8.0_7/include/opencv4"
+default: all
 
-all: radii derot siderot prederot
-
+all: radii derot prederot adv_prederot adv_derot sbs_derot sbs_prederot sbs_adv_derot sbs_adv_prederot
 radii:
-	g++ -O3 -I${INCLUDES} -std=c++11 radii_check.cpp -o radii_check `pkg-config --libs opencv4`
+	g++ -O3 -I${INCLUDES} -std=c++17 radii_check.cpp -o $@ `pkg-config --libs opencv4`
 
 derot:
-	g++ -O3 -I${INCLUDES} -std=c++11 derot.cpp -o derot `pkg-config --libs opencv4`
-
-siderot:
-	g++ -O3 -I${INCLUDES} -std=c++11 siderot.cpp -o siderot `pkg-config --libs opencv4`
+	g++ -O3 -I${INCLUDES} -std=c++17 new_derot.cpp -o $@ `pkg-config --libs opencv4`
 
 prederot:
-	g++ -O3 -I${INCLUDES} -std=c++11 prederot.cpp -o prederot `pkg-config --libs opencv4`
+	g++ -DPRE -O3 -I${INCLUDES} -std=c++17 new_derot.cpp -o $@ `pkg-config --libs opencv4`
 
-install-bin: radii derot prederot siderot
+adv_derot:
+	g++ -DADV_DEROT -O3 -I${INCLUDES} -std=c++17 new_derot.cpp -o $@ `pkg-config --libs opencv4`
+
+adv_prederot:
+	g++ -DADV_PRE -O3 -I${INCLUDES} -std=c++17 new_derot.cpp -o $@ `pkg-config --libs opencv4`
+
+sbs_derot:
+	g++ -O3 -DSIDE_BY_SIDE -I${INCLUDES} -std=c++17 new_derot.cpp -o $@ `pkg-config --libs opencv4`
+
+sbs_prederot:
+	g++ -DPRE -DSIDE_BY_SIDE -O3 -I${INCLUDES} -std=c++17 new_derot.cpp -o $@ `pkg-config --libs opencv4`
+
+sbs_adv_derot:
+	g++ -DADV_DEROT -DSIDE_BY_SIDE -O3 -I${INCLUDES} -std=c++17 new_derot.cpp -o $@ `pkg-config --libs opencv4`
+
+sbs_adv_prederot:
+	g++ -DADV_PRE -DSIDE_BY_SIDE -O3 -I${INCLUDES} -std=c++17 new_derot.cpp -o $@ `pkg-config --libs opencv4`
+
+install-bin: radii derot prederot
 	mkdir -p $(ROOT_DIR)/$(site)/bin
 	cp radii_check $(ROOT_DIR)/$(site)/bin/radii_check
 	cp derot $(ROOT_DIR)/$(site)/bin/derot
-	cp siderot $(ROOT_DIR)/$(site)/bin/siderot
 	cp prederot $(ROOT_DIR)/$(site)/bin/prederot
+	cp adv_prederot $(ROOT_DIR)/$(site)/bin/adv_prederot
+
+test: adv_derot
+	rm -f out.mp4
+	( date && time ./adv_derot ../example_irl.mp4 462 260 250 13.3 1 out.mp4 1 0,170 0 0) 2>&1 | tee -a runtimes
+
